# obmc-yadro-uefivar

./: MAINTAINERS  README.md  meson.build  uefivar.service
src/: dbus.cpp  dbus.hpp  edk.hpp  main.cpp  nvram.cpp  nvram.hpp  storage.cpp  storage.hpp  variable.cpp  variable.hpp  version.hpp.in
test/: meson.build  nvram.json  nvram_test.cpp  storage_test.cpp  variable_test.cpp
xyz/openbmc_project/: UefiVar.interface.yaml
